fixed spacing for mobile; fixed interests/hobbies to be next to each other

--- a/style.css
+++ b/style.css
@@ -408,3 +408,39 @@ img {
     font-weight: 400;
     color: #fff
 }
+
+/* Spacing for Media */
+@media (max-width: 768px){
+    .hero {
+        padding: 96px 24px 24px 24px;
+    }
+
+    .POUR .container-main {
+        margin-top: 24px;
+    }
+
+    .text-xl {
+        margin-bottom: 12px;
+    }
+
+    .container-main {
+        margin-bottom: 36px;
+    }
+
+    .about {
+        padding: 0 10px;
+    }
+
+    .row-1 {
+        gap: 0;
+    }
+
+    .row-2 {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        font-size: 0.85rem;
+        gap: 12px;
+    }
+
+}
